tests/e2e/keywords/regex_is_keyword.error
Error: syntax error in story at line 1, column 1

1|    regex = 1
      ^^^^^

E0020: `regex` is a reserved keyword
